--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -183,11 +183,24 @@
             (package-refresh-contents)
             (mapc 'package-install packages))))
     #+END_SRC
-**** local packages
-     we'll put them in a directory called =custom/= under =.emacs.d/=
+**** TODO local packages
+     - TODO : not really convinced i am setting this correctly, like what is up with this nested let
+       statement.
+     
      #+BEGIN_SRC emacs-lisp
-       (let ((default-directory  "~/.emacs.d/custom/"))
+       ;; don't look right!
+       (let ((default-directory (concat (expand-file-name (concat user-emacs-directory "custom/")))))
          (normal-top-level-add-subdirs-to-load-path))
+     #+END_SRC
+**** quelpa/quelpa-use-package
+     These allow me to install emacs packages from non-traditional sources, i.e. git repos and
+     whatnot. It's a lot more powerful than that, but tbh i'll probably only ever use it for git
+     repos.
+     #+BEGIN_SRC emacs-lisp
+       (use-package quelpa
+         :ensure t)
+       (use-package quelpa-use-package
+         :ensure t)
      #+END_SRC
 *** general settings
 
